Add option to not render as chapters

--- a/public/options/options.html
+++ b/public/options/options.html
@@ -77,6 +77,18 @@
 						</label>
 					</div>
 				</div>
+
+				<div data-type="toggle" data-sync="renderAsChapters">
+					<div class="switch-container">
+						<label class="switch">
+							<input id="renderAsChapters" type="checkbox" checked>
+							<span class="slider round"></span>
+						</label>
+						<label class="switch-label" for="renderAsChapters">
+							__MSG_renderAsChapters__
+						</label>
+					</div>
+				</div>
 	
 				<div data-type="toggle" data-sync="muteSegments">
 					<div class="switch-container">
