--- a/public/popup.html
+++ b/public/popup.html
@@ -9,7 +9,7 @@
   </head>
 
   <body id="sponsorBlockreativKPopupBody">
-    <div id="sponsorblockreativKPopup" class="sponsorBlockreativKPageBody preload">
+    <div id="sponsorblockreativKPopup" class="sponsorBlockreativKPageBody sb-preload">
 
       <header class="sbPopupLogo">
         <img src="icons/IconSponsorBlockreativKer256px.png" alt="SponsorBlockreativK" width="40" height="40" id="sponsorBlockreativKPopupLogo">
