--- a/public/popup.html
+++ b/public/popup.html
@@ -9,7 +9,7 @@
   </head>
 
   <body id="sponsorBlockPopupBody">
-    <div id="sponsorblockPopup" class="sponsorBlockPageBody preload">
+    <div id="sponsorblockPopup" class="sponsorBlockPageBody sb-preload">
 
       <header class="sbPopupLogo">
         <img src="icons/IconSponsorBlocker256px.png" alt="SponsorBlock" width="40" height="40" id="sponsorBlockPopupLogo">
