Remove unnecessary flexbox usage

--- a/public/popup.html
+++ b/public/popup.html
@@ -68,7 +68,7 @@
         <p class="sbHeader">
           __MSG_recordTimesDescription__
         </p>
-        <sub style="margin-bottom: 12px;">__MSG_popupHint__</sub>
+        <sub class="sponsorStartHint">__MSG_popupHint__</sub>
         <div>
           <button id="sponsorStart" class="sbMediumButton">__MSG_sponsorStart__</button>
         </div>
