Add beta server warning to popup
#1275

--- a/public/popup.html
+++ b/public/popup.html
@@ -11,6 +11,10 @@
   <body id="sponsorBlockreativKPopupBody">
     <div id="sponsorblockreativKPopup" class="sponsorBlockreativKPageBody sb-preload">
 
+      <div id="sbBetaServerWarning" class="hidden" title="__MSG_openOptionsPage__">
+        __MSG_betaServerWarning__
+      </div>
+
       <header class="sbPopupLogo">
         <img src="icons/IconSponsorBlockreativKer256px.png" alt="SponsorBlockreativK" width="40" height="40" id="sponsorBlockreativKPopupLogo">
         <p class="u-mZ">SponsorBlockreativK</p>
