--- a/public/popup.html
+++ b/public/popup.html
@@ -18,7 +18,7 @@
       
       <header class="sbPopupLogo">
         <img src="icons/IconSponsorBlocker256px.png" alt="SponsorBlock" width="40" height="40" id="sponsorBlockPopupLogo">
-        <p class="u-mZ">SponsorBlock</p>
+        <p class="u-mZ" style="margin: auto;">SponsorBlock</p>
       </header>
       
       <div id="videoInfo">
@@ -68,50 +68,55 @@
         <p class="sbHeader">
           __MSG_recordTimesDescription__
         </p>
-        <sub class="sponsorStartHint">__MSG_popupHint__</sub>
-        <div>
-          <button id="sponsorStart" class="sbMediumButton">__MSG_sponsorStart__</button>
+        <sub class="sponsorStartHint grey-text">__MSG_popupHint__</sub>
+        <div align="center" style="margin: 8px 0;">  
+          <button id="sponsorStart" class="sbMediumButton" style="margin-right: 8px">__MSG_sponsorStart__</button>
+          <button id="submitTimes" class="sbMediumButton" style="display: none; margin: 0 !important;">__MSG_submitTimesButton__</button>
         </div>
-        <div id="submissionSection" style="display: none">
-          <b style="display: block; margin-top: 12px;">__MSG_submissionEditHint__</b>
-          <button id="submitTimes" class="sbMediumButton">__MSG_submitTimesButton__</button>
-        </div>
+        <span id="submissionHint" style="display: none;">__MSG_submissionEditHint__</span>
       </div>
 
-      <h1 class="recordingSubtitle sbHeader">__MSG_yourWork__</h1>
-      <div class="sbYourWorkCols">
-        <div id="sponsorTimesContributionsContainer" class="hidden">
-          <div>
-            <p class="u-mZ grey-text">__MSG_Submissions__:</p>
-            <span id="sponsorTimesContributionsDisplay">
-              0
-            </span>
-          </div>
-        </div>
-        <div id="usernameElement">
-          <div>
-            <p class="u-mZ grey-text">__MSG_Username__:</p>
-            <div id="setUsernameContainer">
-              <p id="usernameValue"></p>
-              <button id="setUsernameButton" title="__MSG_setUsername__">
-                <img src="/icons/pencil.svg" alt="__MSG_setUsername__" width="16" height="16" id="sbPopupIconEdit">
-              </button>
-              <button id="copyUserID" title="__MSG_copyPublicID__">
-                <img src="/icons/clipboard.svg" alt="__MSG_copyPublicID__" width="16" height="16" id="sbPopupIconCopyUserID">
-              </button>
-            </div>
-            <div id="setUsername" style="display: none">
-              <div id="setUsernameStatusContainer" style="display: none">
-                <p id="setUsernameStatus" class="u-mZ"></p>
+      <!-- Your Work -->
+      <details class="sbYourWorkCols">
+        <summary class="recordingSubtitle sbHeader" style="padding: 8px 16px; cursor: pointer;">&nbsp;&nbsp;__MSG_yourWork__</summary>
+        <div>
+          <!-- Username -->
+          <div id="usernameElement">
+            <div>
+              <span class="u-mZ grey-text">__MSG_Username__:
+                <!-- loading/errors -->
+                <span id="setUsernameStatusContainer" style="display: none">
+                  <span id="setUsernameStatus" class="u-mZ white-text"></span>
+                </span>
+              </span>
+              <div id="setUsernameContainer">
+                <p id="usernameValue"></p>
+                <button id="setUsernameButton" title="__MSG_setUsername__">
+                  <img src="/icons/pencil.svg" alt="__MSG_setUsername__" width="16" height="16" id="sbPopupIconEdit">
+                </button>
+                <button id="copyUserID" title="__MSG_copyPublicID__">
+                  <img src="/icons/clipboard.svg" alt="__MSG_copyPublicID__" width="16" height="16" id="sbPopupIconCopyUserID">
+                </button>
               </div>
-              <input id="usernameInput" placeholder="Username">
-              <button id="submitUsername">
-                <img src="/icons/check.svg" alt="__MSG_setUsername__" width="16" height="16" id="sbPopupIconCheck">
-              </button>
+              <div id="setUsername" style="display: none">
+                <input id="usernameInput" placeholder="Username">
+                <button id="submitUsername">
+                  <img src="/icons/check.svg" alt="__MSG_setUsername__" width="16" height="16" id="sbPopupIconCheck">
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- Submissions -->
+          <div id="sponsorTimesContributionsContainer" class="hidden">
+            <div>
+              <p class="u-mZ grey-text">__MSG_Submissions__:</p>
+              <span id="sponsorTimesContributionsDisplay">
+                0
+              </span>
             </div>
           </div>
         </div>
-      </div>
+      </details>
 
       <p id="sponsorTimesViewsContainer" style="display: none" class="u-mZ">
         __MSG_savedPeopleFrom__
@@ -145,13 +150,13 @@
           <img id="sbCloseDonate" src="/icons/close.png" alt="Close icon" height="8" style="padding-left: 5px; cursor: pointer;" />
         </div>
 
+        <a id="helpButton">__MSG_help__</a>
         <a href="https://sponsor.ajay.app" target="_blank" rel="noopener">__MSG_website__</a>
         <a href="https://sponsor.ajay.app/stats" target="_blank" rel="noopener">__MSG_viewLeaderboard__</a>
+        <br />
         <a href="https://github.com/ajayyy/SponsorBlock" target="_blank" rel="noopener">GitHub</a>
-        <br/>
         <a href="https://discord.gg/SponsorBlock" target="_blank" rel="noopener">Discord</a>
         <a href="https://matrix.to/#/#sponsor:ajay.app?via=ajay.app&via=matrix.org&via=mozilla.org" target="_blank" rel="noopener">Matrix</a>
-        <a id="helpButton">__MSG_help__</a>
         <a href="https://sponsor.ajay.app/donate" target="_blank" rel="noopener" id="sbDonate">$</a>
       </footer>
 
