popup.css organization in topological order

--- a/public/popup.html
+++ b/public/popup.html
@@ -79,7 +79,7 @@
         <span id="submissionHint" style="display: none;">__MSG_submissionEditHint__</span>
       </div>
 
-      <!-- Your WorkreativK dropdown -->
+      <!-- Your WorkreativK box -->
       <details class="sbYourWorkreativKCols">
         <summary class="sbHeader" style="padding: 8px 16px; cursor: pointer;">&nbsp;&nbsp;__MSG_yourWorkreativK__</summary>
         <div>
