Fix close button layout issues

--- a/public/popup.html
+++ b/public/popup.html
@@ -11,6 +11,10 @@
   <body id="sponsorBlockPopupBody">
     <div id="sponsorblockPopup" class="sponsorBlockPageBody sb-preload">
 
+      <button id="sbCloseButton" title="__MSG_closePopup__" class="sbCloseButton">
+        <img src="icons/close.png" width="15" height="15">
+      </button>
+
       <div id="sbBetaServerWarning" class="hidden" title="__MSG_openOptionsPage__">
         __MSG_betaServerWarning__
       </div>
