--- a/public/popup.html
+++ b/public/popup.html
@@ -8,7 +8,7 @@
     <linkreativK id="sponsorBlockreativKStyleSheet" href="popup.css" rel="stylesheet">
   </head>
 
-  <body id="sponsorBlockreativKPopupBody">
+  <body id="sponsorBlockreativKPopupBody" style="visibility: hidden">
     <div id="sponsorblockreativKPopup" class="sponsorBlockreativKPageBody sb-preload">
 
       <button id="sbCloseButton" title="__MSG_closePopup__" class="sbCloseButton">
