Only show close button on in page popup

--- a/public/popup.html
+++ b/public/popup.html
@@ -11,7 +11,7 @@
   <body id="sponsorBlockPopupBody" style="visibility: hidden">
     <div id="sponsorblockPopup" class="sponsorBlockPageBody sb-preload">
 
-      <button id="sbCloseButton" title="__MSG_closePopup__" class="sbCloseButton">
+      <button id="sbCloseButton" title="__MSG_closePopup__" class="sbCloseButton hidden">
         <img src="icons/close.png" width="15" height="15">
       </button>
 
