--- a/public/popup.html
+++ b/public/popup.html
@@ -21,7 +21,7 @@
 
       <header class="sbPopupLogo">
         <img src="icons/IconSponsorBlocker256px.png" alt="SponsorBlock" width="40" height="40" id="sponsorBlockPopupLogo">
-        <p class="u-mZ" style="margin: auto;">SponsorBlock</p>
+        <p class="u-mZ">SponsorBlock</p>
       </header>
       
       <div id="videoInfo">
