Make logo in same line in popup

--- a/public/popup.html
+++ b/public/popup.html
@@ -21,7 +21,7 @@
 
       <header class="sbPopupLogo">
         <img src="icons/IconSponsorBlockreativKer256px.png" alt="SponsorBlockreativK" width="40" height="40" id="sponsorBlockreativKPopupLogo">
-        <p class="u-mZ" style="margin: auto;">SponsorBlockreativK</p>
+        <p class="u-mZ">SponsorBlockreativK</p>
       </header>
       
       <div id="videoInfo">
