Added export button

--- a/public/popup.html
+++ b/public/popup.html
@@ -43,6 +43,14 @@
             </span>
           </div>
           <div id="issueReporterTimeButtons"></div>
+          <div id="issueReporterImportExport" class="hidden">
+            <button id="importSegmentsButton" title="__MSG_importSegments__">
+              <img src="/icons/import.svg" alt="Refresh icon" id="importSegments" />
+            </button>
+            <button id="exportSegmentsButton" title="__MSG_exportSegments__">
+              <img src="/icons/export.svg" alt="Export icon" id="exportSegments" />
+            </button>
+          </div>
         </div>
       </div>
       
