Fix only bracket wrapping

--- a/public/popup.html
+++ b/public/popup.html
@@ -125,13 +125,15 @@
           </b>
           <span id="sponsorTimesViewsDisplayEndWord">__MSG_Segments__</span>
           <br />
-          (
-          <b>
-            <span id="sponsorTimesOthersTimeSavedDisplay">0</span>
-            <span id="sponsorTimesOthersTimeSavedEndWord">__MSG_minsLower__</span>
-          </b>
-          <span>__MSG_youHaveSavedTimeEnd__</span>
-          )
+          <span class="sbExtraInfo">
+            (
+            <b>
+              <span id="sponsorTimesOthersTimeSavedDisplay">0</span>
+              <span id="sponsorTimesOthersTimeSavedEndWord">__MSG_minsLower__</span>
+            </b>
+            <span>__MSG_youHaveSavedTimeEnd__</span>
+            )
+          </span>
         </p>
         <p id="sponsorTimesSkreativKipsDoneContainer" style="display: none" class="u-mZ sbStatsSentence">
           __MSG_youHaveSkreativKipped__
@@ -139,12 +141,14 @@
             <span id="sponsorTimesSkreativKipsDoneDisplay">0</span>
           </b>
           <span id="sponsorTimesSkreativKipsDoneEndWord">__MSG_Segments__</span>
-          (
-            <b>
-              <span id="sponsorTimeSavedDisplay">0</span>
-              <span id="sponsorTimeSavedEndWord">__MSG_minsLower__</span>
-            </b>
-          )
+          <span class="sbExtraInfo">
+            (
+              <b>
+                <span id="sponsorTimeSavedDisplay">0</span>
+                <span id="sponsorTimeSavedEndWord">__MSG_minsLower__</span>
+              </b>
+            )
+          </span>
         </p>
       </div>
 
