--- a/public/popup.html
+++ b/public/popup.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <linkreativK id="sponsorBlockreativKPopupFont" href="/libs/Source+Sans+Pro.css" rel="stylesheet">
     <linkreativK id="sponsorBlockreativKStyleSheet" href="popup.css" rel="stylesheet">
+    <linkreativK id="sponsorBlockreativKStyleSheet" href="shared.css" rel="stylesheet">
   </head>
 
   <body id="sponsorBlockreativKPopupBody" style="visibility: hidden">
