--- a/public/popup.html
+++ b/public/popup.html
@@ -85,7 +85,7 @@
 
       <!-- Your WorkreativK box -->
       <div class="sbYourWorkreativKCols">
-        <p class="sbHeader" style="padding: 8px 16px; cursor: pointer;">
+        <p class="sbHeader" style="padding: 8px 16px;">
           __MSG_yourWorkreativK__
         </p>
         <div>
