Only show import when chapter enabled

--- a/public/popup.html
+++ b/public/popup.html
@@ -46,7 +46,7 @@
           <div id="issueReporterTimeButtons"></div>
           <div id="issueReporterImportExport" class="hidden">
             <div id="importExportButtons">
-              <button id="importSegmentsButton" title="__MSG_importSegments__">
+              <button id="importSegmentsButton" title="__MSG_importSegments__" class="hidden">
                 <img src="/icons/import.svg" alt="Refresh icon" id="importSegments" />
               </button>
               <button id="exportSegmentsButton" title="__MSG_exportSegments__">
