--- a/public/options/options.html
+++ b/public/options/options.html
@@ -78,13 +78,13 @@
 					</div>
 				</div>
 
-				<div data-type="toggle" data-sync="renderAsChapters">
+				<div data-type="toggle" data-sync="renderSegmentsAsChapters">
 					<div class="switch-container">
 						<label class="switch">
-							<input id="renderAsChapters" type="checkbox" checked>
+							<input id="renderSegmentsAsChapters" type="checkbox" checked>
 							<span class="slider round"></span>
 						</label>
-						<label class="switch-label" for="renderAsChapters">
+						<label class="switch-label" for="renderSegmentsAsChapters">
 							__MSG_renderAsChapters__
 						</label>
 					</div>
