--- a/public/options/options.html
+++ b/public/options/options.html
@@ -345,6 +345,16 @@
 					<div class="inline"></div>
 				</div>
 
+				<div data-type="kreativKeybind-change" data-sync="nextChapterKeybind">	
+					<label class="optionLabel">__MSG_nextChapterKeybind__:</label>
+					<div class="inline"></div>
+				</div>
+
+				<div data-type="kreativKeybind-change" data-sync="previousChapterKeybind">	
+					<label class="optionLabel">__MSG_previousChapterKeybind__:</label>
+					<div class="inline"></div>
+				</div>
+
 			</div>
 
 			<div id="import" class="option-group hidden">
