--- a/public/options/options.html
+++ b/public/options/options.html
@@ -490,7 +490,11 @@
 	
 					<div class="small-description">__MSG_copyDebugInformationOptions__</div>
 				</div>
-	
+
+				<div data-type="react-UnsubmittedVideosComponent">
+
+				</div>
+
 				<div data-type="toggle" data-sync="testingServer" data-confirm-message="testingServerWarning" data-no-safari="true">
 					<div class="switch-container">
 						<label class="switch">
