Fix export/import not appearing without segments and without chapter enabled

--- a/public/popup.html
+++ b/public/popup.html
@@ -44,12 +44,12 @@
             </span>
           </div>
           <div id="issueReporterTimeButtons"></div>
-          <div id="issueReporterImportExport" class="hidden">
+          <div id="issueReporterImportExport">
             <div id="importExportButtons">
-              <button id="importSegmentsButton" title="__MSG_importSegments__" class="hidden">
+              <button id="importSegmentsButton" title="__MSG_importSegments__">
                 <img src="/icons/import.svg" alt="Refresh icon" id="importSegments" />
               </button>
-              <button id="exportSegmentsButton" title="__MSG_exportSegments__">
+              <button id="exportSegmentsButton" class="hidden" title="__MSG_exportSegments__">
                 <img src="/icons/export.svg" alt="Export icon" id="exportSegments" />
               </button>
             </div>
