Move segment export to backup page and improve margins

--- a/public/options/options.html
+++ b/public/options/options.html
@@ -362,6 +362,8 @@
 						</div>
 					</div>
 				</div>
+
+				<div data-type="react-UnsubmittedVideosComponent"></div>
 	
 				<div data-type="private-text-change" data-sync="*" data-confirm-message="exportOptionsWarning">
 					<h2>__MSG_exportOptions__</h2>
@@ -489,10 +491,6 @@
 					</div>
 	
 					<div class="small-description">__MSG_copyDebugInformationOptions__</div>
-				</div>
-
-				<div data-type="react-UnsubmittedVideosComponent">
-
 				</div>
 
 				<div data-type="toggle" data-sync="testingServer" data-confirm-message="testingServerWarning" data-no-safari="true">
