Fix redirect uri

--- a/public/upsell/index.html
+++ b/public/upsell/index.html
@@ -58,7 +58,7 @@
 	</div>
 
 	<div class="center row-item">
-		<a href="https://www.patreon.com/oauth2/authorize?response_type=code&client_id=-W7ib8J-LB3jowb1fqE07A7RDUovy45_pOoWcjby6yr5upo6At8Jlg2BPhWDXO2k&redirect_uri=https%3A%2F%2Fsponsor.ajay.app%3A3000%2Fapi%2FgenerateToken%2Fpatreon"
+		<a href="https://www.patreon.com/oauth2/authorize?response_type=code&client_id=-W7ib8J-LB3jowb1fqE07A7RDUovy45_pOoWcjby6yr5upo6At8Jlg2BPhWDXO2k&redirect_uri=https%3A%2F%2Fsponsor.ajay.app%2Fapi%2FgenerateToken%2Fpatreon"
 			class="option-link" target="_blank" rel="noreferrer">
 			<div class="option-button inline">
 				__MSG_patreonSignIn__
