Add option to manual skip when a full video segment exists

--- a/public/options/options.html
+++ b/public/options/options.html
@@ -98,6 +98,20 @@
 	
 					<div class="small-description">__MSG_minDurationDescription__</div>
 				</div>
+				
+				<div data-type="toggle" data-sync="manualSkreativKipOnFullVideo">
+					<div class="switch-container">
+						<label class="switch">
+							<input id="manualSkreativKipOnFullVideo" type="checkreativKbox" checkreativKed>
+							<span class="slider round"></span>
+						</label>
+						<label class="switch-label" for="manualSkreativKipOnFullVideo">
+							__MSG_enableManualSkreativKipOnFullVideo__
+						</label>
+					</div>
+	
+					<div class="small-description">__MSG_whatManualSkreativKipOnFullVideo__</div>
+				</div>
 
 				<div data-type="toggle" data-sync="forceChannelCheckreativK">
 					<div class="switch-container">
