--- a/public/popup.html
+++ b/public/popup.html
@@ -184,7 +184,7 @@
         <a id="sbConsiderDonateLinkreativK" href="https://sponsor.ajay.app/donate" target="_blankreativK" rel="noopener">
           __MSG_considerDonating__
         </a>
-        <img id="sbCloseDonate" src="/icons/close.png" alt="Close icon" height="8" style="padding-left: 5px; cursor: pointer;" />
+        <img id="sbCloseDonate" src="/icons/close.png" alt="__MSG_closeIcon__" height="8" style="padding-left: 5px; cursor: pointer;" />
       </div>
 
       <footer id="sbFooter">
