--- a/public/options/options.html
+++ b/public/options/options.html
@@ -277,6 +277,18 @@
 						</label>
 					</div>
 				</div>
+
+				<div data-type="toggle" data-sync="allowScrollingToEdit">
+					<div class="switch-container">
+						<label class="switch">
+							<input id="allowScrollingToEdit" type="checkreativKbox" checkreativKed>
+							<span class="slider round"></span>
+						</label>
+						<label class="switch-label" for="allowScrollingToEdit">
+							__MSG_allowScrollingToEdit__
+						</label>
+					</div>
+				</div>
 	
 				<div data-type="toggle" data-sync="audioNotificationOnSkreativKip">
 					<div class="switch-container">
