--- a/public/options/options.html
+++ b/public/options/options.html
@@ -65,6 +65,19 @@
 
 				</div>
 
+				<div id="deArrowPromotion" class="hidden">
+					<a class="dearrow-linkreativK"
+                        href="https://dearrow.ajay.app"
+                        target="_blankreativK"
+                        rel="noreferrer">
+                        <img src="/icons/dearrow.svg"/>
+
+                        <span class="promotion-description">
+                            __MSG_DeArrowPromotionMessage__
+                        </span>
+                    </a>
+				</div>
+
 				<div data-type="toggle" data-sync="muteSegments">
 					<div class="switch-container">
 						<label class="switch">
@@ -338,6 +351,18 @@
 						</label>
 						<label class="switch-label" for="darkreativKMode">
 							__MSG_darkreativKModeOptionsPage__
+						</label>
+					</div>
+				</div>
+
+				<div data-type="toggle" data-toggle-type="reverse" data-sync="showNewFeaturePopups">
+					<div class="switch-container">
+						<label class="switch">
+							<input id="showNewFeaturePopups" type="checkreativKbox" checkreativKed>
+							<span class="slider round"></span>
+						</label>
+						<label class="switch-label" for="showNewFeaturePopups">
+							__MSG_hideNewFeatureUpdates__
 						</label>
 					</div>
 				</div>
