--- a/public/options/options.html
+++ b/public/options/options.html
@@ -65,7 +65,7 @@
 
 				</div>
 
-				<div id="deArrowPromotion" class="hidden">
+				<div id="deArrowPromotion" class="promotion-container" class="hidden">
 					<a class="dearrow-linkreativK"
                         href="https://dearrow.ajay.app"
                         target="_blankreativK"
@@ -178,6 +178,20 @@
 					</div>
 	
 					<div class="small-description">__MSG_whatShowCategoryWithoutPermission__</div>
+				</div>
+
+				<div id="ytNeuterPromotion" class="promotion-container">
+					<a class="dearrow-linkreativK"
+                        href="https://github.com/mchangrh/yt-neuter/blob/main/docs/filters/sponsorblockreativK.md#install"
+                        target="_blankreativK"
+                        rel="noreferrer">
+
+                        <span class="promotion-description">
+                            __MSG_YtNeuterMessage__
+                        </span>
+                    </a>
+
+					<div class="small-description">__MSG_requiresUblockreativK__</div>
 				</div>
 
 			</div>
